arreglando paginas nuevas

--- a/singles.html
+++ b/singles.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Single S</title>
+	<title>Initial S Hand</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="assets/img/logo.png">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<!-- CSS local -->
 	<link rel="stylesheet" href="assets/css/style.css">
     <!-- Tipografías -->
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Quicksand:700" rel="stylesheet">
 	<script src="https://use.fontawesome.com/aa0c728197.js"></script>
 </head>
 <body>
@@ -20,42 +20,42 @@
 			<div class="contenido_header">
 				<div class="inicio">
 					<ul class="lista-principal">
-						<li><a href="#">PRODUCTOS</a></li>
-						<li><a href="#">PRODUCTOS ESTERILIZADOS</a></li>
+						<li><a href="index.html">PRODUCTOS</a></li>
 						<li><a href="compania.html">EMPRESA</a></li>
-						<li><a href="#">CONTACTO</a></li>
+						<li><a href="contacto.html">CONTACTO</a></li>
 					</ul>
 				</div>	
 				<div class="datos-contacto">
-					<p><i class="fa fa-phone" aria-hidden="true"></i> +56 9 993 35 506</p>
-					<p><i class="fa fa-envelope" aria-hidden="true"></i> mramirez@innova-lr.cl</p>
+					<img src="assets/img/banners/loguitonew.png" alt="">
 				</div>	
 			</div>
 		</div>
 	</section>
 
 	<nav class="nav">
+	  <a class="nav-link" href="index.html">PRODUCTOS</a>
 	  <a id="implantes" class="nav-link" href="#">IMPLANTES ESTERILIZADOS</a>
 	  <a id="superior" class="nav-link" href="#">EXTREMIDAD SUPERIOR Y MANO</a>
-	  <a class="nav-link" href="#">EXTREMIDAD INFERIOR Y PIE</a>
-	  <a class="nav-link" href="#">MEDICINA DEPORTIVA</a>
+	  <!--<a id="inferior" class="nav-link" href="#">EXTREMIDAD INFERIOR Y PIE</a>-->
+	  <!--<a id="medicina" class="nav-link" href="#">MEDICINA DEPORTIVA</a>-->
 	</nav>
 
 	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
-		<ul>
+		<ul style="margin-left: 2%;">
 			<li><a href="singlea.html">INITIAL A</a></li>
 			<li><a href="singlec.html">INITIAL C</a></li>
 			<li><a href="singler.html">INITIAL R</a></li>
-			<li><a href="singles.html">INITIAL S</a></li>
+			<li><a id="initials" href="#">INITIAL S</a></li>
+			<li><a href="initial-mtp.html">INITIAL MTP</a></li>
 		</ul>
 	</div>
 
 	<div id="lista-menu-2" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
 		<ul>
 			<li><a id="clavicula" href="upper_alians_clavicle.html">CLAVICULA</a></li>
-			<li><a href="singlec.html">HUMERO</a></li>
-			<li><a href="singler.html">RADIO Y ULNA</a></li>
-			<li><a href="singles.html">MANO</a></li>
+			<li><a id="humero" href="#">HUMERO</a></li>
+			<li><a id="radio" href="singler.html">RADIO Y CUBITO</a></li>
+			<li><a id="mano" href="singles.html">MANO</a></li>
 		</ul>
 	</div>
 
@@ -64,10 +64,55 @@
 			<li><a href="upper_alians_clavicle.html">ALIANS CLAVICULA</a></li>
 		</ul>
 	</div>
+
+	<div id="lista-menu-4" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul>
+			<li><a href="upper_humerus_alians.html">HUMERO PROXIMAL</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">CODO</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-5" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul>
+			<li><a href="upper_radius_alians_ulna.html">ACORTAMIENTO CUBITAL</a></li>
+			<li><a href="upper_radius_alians_radius.html">RADIO DISTAL</a></li>
+			<li><a href="upper_radius_alians_midshaft.html">ANTEBRAZO</a></li>
+			<li><a href="upper_radius_alians_specific.html">FRAGMENTO ESPECÍFICO</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-6" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 41%;">
+			<li><a href="upper_hand_handmotion.html">TORNILLOS CANULADOS</a></li>
+		</ul>
+	</div>
+
+	<!--<div id="lista-menu-7" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 368px;">
+			<li><a href="upper_humerus_alians.html">FEMUR</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">PIE</a></li>
+			<li><a href="upper_humerus_alians.html">TIBIA</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">TOBILLO</a></li>
+		</ul>
+	</div>-->
+
+	<div id="lista-menu-8" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 36%;">
+			<li><a href="sports_tibia_activmotion.html">ACTIVMOTION</a></li>
+			<li><a href="lower_tibia_activmotion-ligamento.html">ACTIVMOTION LIGAMENTO</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-9" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 23%;">
+			<li><a href="singles.html">INITAL S HAND</a></li>
+			<li><a href="singlesfoot.html">INITAL S FOOT</a></li>
+		</ul>
+	</div>
 	
 	<section id="header-inicio">
-		<div class="container-fluid">
-			<img class="banner-1" src="assets/img/banner-singles.jpg" alt="">
+		<div class="container-fluid text-center" style="padding: 0;">
+			<img class="banner-1 w-100" src="assets/img/banners/initial-s-foot.jpg" alt="">
 		</div>
 	</section>
 
@@ -75,39 +120,56 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-a">
-					<h4 class="title-bold">INITIAL S</h4>
+					<h4 class="title-bold">INITIAL S™ HAND</h4>
 					<h5 class="title-bold">INDICATIONS</h5>
-					<p>The implants of the Initial A range are intended for the fixation of bone fractures and osteotomies and for arthrodeses of hand in adults.</p>
+					<p>The implants of the Initial S™ range are intended for the fixation of bone fractures and osteotomies and for arthrodeses of hand in adults.</p>
 					<h5 class="title-bold">KIT CONTENT</h5>
 					<ul>
 						<li>Instrumentation only</li>
+						<img src="assets/img/img-singles.png">
 						<li>Implants: Additional sterile screws can be ordered separated in sterile packaging.</li>
 					</ul>
 					<h5 class="title-bold">IMPLANTS</h5>
-					<p>Initial S Hand kits are available in version:</p>
+					<p>Initial S™ Hand kits are available in version:</p>
 					<p>Plates:</p>
 					<p>2 types of plates:</p>
 					<p>Standard plates: Size 1 (75mm), Size 2 (97 mm) and Size 3 (128 mm), available in right and left version.</p>
 					<ul style="padding: 0px;">
 						<li>Ø2.25 mm instrumentation dedicated to the Ø2.25 mm cannulated self-drilling, self-tapping, self-compressive screws <br> Long thread: from 8 to 34 mm (2 mm increments), <br> Short thread: from 14 to 34 mm (2 mm increments).</li>
+						<br>
 						<li>Ø2.6 mm instrumentation dedicated to the Ø2.6 mm cannulated self-drilling, self-tapping, self-compressive screws: <br> Long thread: from 10 to 34 mm (2 mm increments) <br> Short thread: from 14 mm to 34 mm (2 mm increments).</li>
+						<br>
 						<li>Ø3.0 mm instrumentation dedicated to the Ø3.0 mm cannulated self-drilling, self-tapping, self-compressive screws: <br> Long thread: from 10 to 40 mm (2 mm increments) <br> Short thread: from 14 mm to 34 mm (2 mm increments).</li>
 					</ul>
 				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-a">
-					<img src="assets/img/img-singles.png">
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-b">
+					<ul>
+						<li><a href="">Concept Inital Solution</a></li>
+						<li><a href="assets/pdf/compo_kit_en_initials_hand_ed1_hd__042056900_1054_13062017.pdf" hreflang="en" class="LinkFile" target="_blank">Inital S™ Hand Kit content</a></li>
+					</ul>
 				</div>
 			</div>
 		</div>
 	</section>
 
+	<section id="menu-down" class="text-center">
+		<div class="inicio">
+			<ul class="lista-principal" style="padding: 0;">
+				<li><a href="index.html">PRODUCTOS</a></li>
+				<li><a href="compania.html">EMPRESA</a></li>
+				<li><a href="contacto.html">CONTACTO</a></li>
+			</ul>
+		</div>	
+	</section>
+
 	<footer class="text-center">
+		<br>
 		<h4>INNOVATIONS MEANS MOTION</h4>
+		<br>
 		<p>Administración: Avenida Apoquindo 6410 oficina 605 Las Condes</p>
 		<p>Comercial Avda. Libertador Bernardo O'Higgins 4050 Of. 1005</p>
 	</footer>
 
-	
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
