--- a/sports_tibia_activmotion.html
+++ b/sports_tibia_activmotion.html
@@ -47,7 +47,8 @@
 			<li><a href="singlea.html">INITIAL A</a></li>
 			<li><a href="singlec.html">INITIAL C</a></li>
 			<li><a href="singler.html">INITIAL R</a></li>
-			<!--<li><a href="singles.html">INITIAL S</a></li>-->
+			<li><a href="#">INITIAL S</a></li>
+			<li><a href="initial-mtp.html">INITIAL MTP</a></li>
 		</ul>
 	</div>
 
