--- a/aliansfragmentspecific.html
+++ b/aliansfragmentspecific.html
@@ -26,8 +26,7 @@
 					</ul>
 				</div>	
 				<div class="datos-contacto">
-					<p><i class="fa fa-phone" aria-hidden="true"></i> +56 9 993 35 506</p>
-					<p><i class="fa fa-envelope" aria-hidden="true"></i> mramirez@innova-lr.cl</p>
+					<img src="assets/img/banners/loguitonew.png" alt="">
 				</div>	
 			</div>
 		</div>
@@ -46,7 +45,8 @@
 			<li><a href="singlea.html">INITIAL A</a></li>
 			<li><a href="singlec.html">INITIAL C</a></li>
 			<li><a href="singler.html">INITIAL R</a></li>
-			<!--<li><a href="singles.html">INITIAL S</a></li>-->
+			<li><a id="initials" href="#">INITIAL S</a></li>
+			<li><a href="initial-mtp.html">INITIAL MTP</a></li>
 		</ul>
 	</div>
 
