--- a/contacto.html
+++ b/contacto.html
@@ -22,12 +22,11 @@
 					<ul class="lista-principal">
 						<li><a href="index.html">PRODUCTOS</a></li>
 						<li><a href="compania.html">EMPRESA</a></li>
-						<li><a href="#">CONTACTO</a></li>
+						<li><a href="contacto.html">CONTACTO</a></li>
 					</ul>
 				</div>	
 				<div class="datos-contacto">
-					<span><a href="tel:+56999335506" style="color: white;"><i class="fa fa-phone" aria-hidden="true"></i> +56 9 993 35 506</a></span>
-					<p><a href="mailto:mramirez@innova-lr.cl" style="color: white;"><i class="fa fa-envelope" aria-hidden="true"></i> mramirez@innova-lr.cl</a></p>
+					<img src="assets/img/banners/loguitonew.png" alt="">
 				</div>	
 			</div>
 		</div>
@@ -41,14 +40,75 @@
 	  <!--<a id="medicina" class="nav-link" href="#">MEDICINA DEPORTIVA</a>-->
 	</nav>
 
-	<!--<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		<ul>
+	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 2%;">
 			<li><a href="singlea.html">INITIAL A</a></li>
 			<li><a href="singlec.html">INITIAL C</a></li>
 			<li><a href="singler.html">INITIAL R</a></li>
-			<li><a href="singles.html">INITIAL S</a></li>
+			<li><a id="initials" href="#">INITIAL S</a></li>
+			<li><a href="initial-mtp.html">INITIAL MTP</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-2" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul>
+			<li><a id="clavicula" href="upper_alians_clavicle.html">CLAVICULA</a></li>
+			<li><a id="humero" href="#">HUMERO</a></li>
+			<li><a id="radio" href="singler.html">RADIO Y CUBITO</a></li>
+			<li><a id="mano" href="singles.html">MANO</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-3" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul>
+			<li><a href="upper_alians_clavicle.html">ALIANS CLAVICULA</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-4" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul>
+			<li><a href="upper_humerus_alians.html">HUMERO PROXIMAL</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">CODO</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-5" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul>
+			<li><a href="upper_radius_alians_ulna.html">ACORTAMIENTO CUBITAL</a></li>
+			<li><a href="upper_radius_alians_radius.html">RADIO DISTAL</a></li>
+			<li><a href="upper_radius_alians_midshaft.html">ANTEBRAZO</a></li>
+			<li><a href="upper_radius_alians_specific.html">FRAGMENTO ESPECÍFICO</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-6" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 41%;">
+			<li><a href="upper_hand_handmotion.html">TORNILLOS CANULADOS</a></li>
+		</ul>
+	</div>
+
+	<!--<div id="lista-menu-7" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 368px;">
+			<li><a href="upper_humerus_alians.html">FEMUR</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">PIE</a></li>
+			<li><a href="upper_humerus_alians.html">TIBIA</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">TOBILLO</a></li>
 		</ul>
 	</div>-->
+
+	<div id="lista-menu-8" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 36%;">
+			<li><a href="sports_tibia_activmotion.html">ACTIVMOTION</a></li>
+			<li><a href="lower_tibia_activmotion-ligamento.html">ACTIVMOTION LIGAMENTO</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-9" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 23%;">
+			<li><a href="singles.html">INITAL S HAND</a></li>
+			<li><a href="singlesfoot.html">INITAL S FOOT</a></li>
+		</ul>
+	</div>
 
 	<div class="container container-2">
 		<div class="row">
