--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 					</ul>
 				</div>	
 				<div class="datos-contacto">
-					<span><a href="tel:+56999335506" style="color: white;"><i class="fa fa-phone" aria-hidden="true"></i> +56 9 993 35 506</a></span>
-					<p><a href="mailto:mramirez@innova-lr.cl" style="color: white;"><i class="fa fa-envelope" aria-hidden="true"></i> mramirez@innova-lr.cl</a></p>
+					<img src="assets/img/banners/loguitonew.png" alt="">
 				</div>	
 			</div>
 		</div>
@@ -46,7 +45,8 @@
 			<li><a href="singlea.html">INITIAL A</a></li>
 			<li><a href="singlec.html">INITIAL C</a></li>
 			<li><a href="singler.html">INITIAL R</a></li>
-			<!--<li><a href="singles.html">INITIAL S</a></li>-->
+			<li><a id="initials" href="#">INITIAL S</a></li>
+			<li><a href="initial-mtp.html">INITIAL MTP</a></li>
 		</ul>
 	</div>
 
@@ -103,7 +103,12 @@
 		</ul>
 	</div>
 
-
+	<div id="lista-menu-9" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 23%;">
+			<li><a href="singles.html">INITAL S HAND</a></li>
+			<li><a href="singlesfoot.html">INITAL S FOOT</a></li>
+		</ul>
+	</div>
 
 	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 	  <div class="carousel-inner">
