--- a/concept.html
+++ b/concept.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Initial S Foot</title>
+	<title>Concept Initial Solution</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="assets/img/logo.png">
@@ -45,7 +45,7 @@
 			<li><a href="singlea.html">INITIAL A</a></li>
 			<li><a href="singlec.html">INITIAL C</a></li>
 			<li><a href="singler.html">INITIAL R</a></li>
-			<li><a id="initials" href="#">INITIAL S</a></li> 
+			<li><a id="initials" href="#">INITIAL S</a></li>
 			<li><a href="initial-mtp.html">INITIAL MTP</a></li>
 		</ul>
 	</div>
@@ -86,55 +86,85 @@
 			<li><a href="upper_hand_handmotion.html">TORNILLOS CANULADOS</a></li>
 		</ul>
 	</div>
-	
-	<section id="header-inicio">
-		<div class="container-fluid text-center" style="padding: 0;">
-			<img class="banner-1 w-100" src="assets/img/banners/initial-s-foot.jpg" alt="">
-		</div>
-	</section>
 
-	<section id="info-singlea">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-a">
-					<h4 class="title-bold">INITIAL S™ FOOT</h4>
-					<h5 class="title-bold">INDICATIONS</h5>
-					<p>The implants of the Initial S™ range are intended for the fixation of bone fractures and osteotomies and for arthrodeses of foot in adults.</p>
-					<h5 class="title-bold">KIT CONTENT</h5>
-					<ul>
-						<li>Instrumentation only</li>
-						<img src="assets/img/initial_s_foot.png" style="width: 90%;">
-						<li>Implants: Additional sterile screws can be ordered separated in sterile packaging.</li>
-					</ul>
-					<h5 class="title-bold">IMPLANTS</h5>
-					<p>Initial S™ Foot kits are available in version:</p>
-					<p>Plates:</p>
-					<p>2 types of plates:</p>
-					<p>Standard plates: Size 1 (75mm), Size 2 (97 mm) and Size 3 (128 mm), available in right and left version.</p>
-					<ul style="padding: 0px;">
-						<li>Ø2.25 mm instrumentation dedicated to the Ø2.25 mm cannulated self-drilling, self-tapping, self-compressive screws <br> Long thread: from 8 to 34 mm (2 mm increments), <br> Short thread: from 14 to 34 mm (2 mm increments).</li>
-						<br>
-						<li>Ø2.6 mm instrumentation dedicated to the Ø2.6 mm cannulated self-drilling, self-tapping, self-compressive screws: <br> Long thread: from 10 to 34 mm (2 mm increments) <br> Short thread: from 14 mm to 34 mm (2 mm increments).</li>
-						<br>
-						<li>Ø3.0 mm instrumentation dedicated to the Ø3.0 mm cannulated self-drilling, self-tapping, self-compressive screws: <br> Long thread: from 10 to 40 mm (2 mm increments) <br> Short thread: from 14 mm to 34 mm (2 mm increments).</li>
-					</ul>
-				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-b">
-					<ul>
-						<li><a href="">Concept Inital Solution</a></li>
-						<li><a href="assets/pdf/compo_kit_en_initials_ed1_bd__038639400_0936_13062017.pdf" hreflang="en" class="LinkFile" target="_blank">Inital S™ Foot Kit content</a></li>
-					</ul>
-				</div>
+	<!--<div id="lista-menu-7" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 368px;">
+			<li><a href="upper_humerus_alians.html">FEMUR</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">PIE</a></li>
+			<li><a href="upper_humerus_alians.html">TIBIA</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">TOBILLO</a></li>
+		</ul>
+	</div>-->
+
+	<div id="lista-menu-8" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 36%;">
+			<li><a href="sports_tibia_activmotion.html">ACTIVMOTION</a></li>
+			<li><a href="lower_tibia_activmotion-ligamento.html">ACTIVMOTION LIGAMENTO</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-9" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 23%;">
+			<li><a href="singles.html">INITAL S HAND</a></li>
+			<li><a href="singlesfoot.html">INITAL S FOOT</a></li>
+		</ul>
+	</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12 text-center">
+				<img src="assets/img/logo_initial_solution__067482800_1658_13062017.png" alt="">
 			</div>
 		</div>
-	</section>
+		<h3>Concept</h3>
+		<br>
+		<div class="row">
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 text-center">
+				<img src="assets/img/conceptual/conceptual-initial_01.png" alt="">
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 text-center">
+				<img src="assets/img/conceptual/conceptual-initial_02.png" alt="">
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 text-center">
+				<img src="assets/img/conceptual/conceptual-initial_03.png" alt="">
+			</div>
+		</div>
+		<br>
+		<div class="row">
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 text-center">
+				<img src="assets/img/conceptual/conceptual-initial_04.png" alt="">
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 text-center">
+				<img src="assets/img/conceptual/conceptual-initial_05.png" alt="">
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 text-center">
+				<img src="assets/img/conceptual/conceptual-initial_06.png" alt="">
+			</div>
+		</div>
+		<br>
+		<br>
+		<br>
+		<h4 class="text-center">Initial Range</h4>
+		<div class="initial-range row">
+			<ul style="margin-left: 350px;" class="text-center">
+				<li><a href="singlea.html" style="color: black;">Initial A</a></li>
+				<li><a href="singlec.html" style="color: black;">Initial C</a></li>
+				<li><a href="singler.html" style="color: black;">Initial R</a></li>
+				<li><a href="singles.html" style="color: black;">Initial S Hand</a></li>
+				<li><a href="singlesfoot.html" style="color: black;">Initial S Foot</a></li>
+			</ul>
+		</div>
+		<br>
+		<br>
+		<br>
+	</div>
 
 	<section id="menu-down" class="text-center">
 		<div class="inicio">
 			<ul class="lista-principal" style="padding: 0;">
 				<li><a href="index.html">PRODUCTOS</a></li>
 				<li><a href="compania.html">EMPRESA</a></li>
-				<li><a href="contacto.html">CONTACTO</a></li>
+				<li><a href="#">CONTACTO</a></li>
 			</ul>
 		</div>	
 	</section>
@@ -147,6 +177,7 @@
 		<p>Comercial Avda. Libertador Bernardo O'Higgins 4050 Of. 1005</p>
 	</footer>
 
+	
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
