--- a/singlec.html
+++ b/singlec.html
@@ -44,6 +44,7 @@
 		<ul style="margin-left: -10px;">
 			<li><a href="singlea.html">INITIAL A</a></li>
 			<li><a href="singlec.html">INITIAL C</a></li>
+			<li><a href="singler.html">INITIAL R</a></li>
 			<li><a id="initials" href="#">INITIAL S</a></li>
 			<li><a href="initial-mtp.html">INITIAL MTP</a></li>
 		</ul>
