subiendo enlace a concept

--- a/initial-mtp.html
+++ b/initial-mtp.html
@@ -172,7 +172,7 @@
 					<ul>
 						<li><a href="assets/pdf/brochureen_ifmtp_ed1_mdef__012423400_0220_20022018.pdf" hreflang="en" class="LinkFile" target="_blank">Inital MTP™ brochure</a></li>
 						<li><a href="assets/pdf/compo_kit_en_initialfmtp_ed2_hd__042760200_0221_20022018.pdf" hreflang="en" class="LinkFile" target="_blank">Inital MTP™ kit content</a></li>
-						<li><a href="assets/pdf/" hreflang="en" class="LinkFile" target="_blank">Concept Initial Solution</a></li>
+						<li><a href="concept.html" hreflang="en" class="LinkFile" target="_blank">Concept Initial Solution</a></li>
 					</ul>
 				</div>
 			</div>
