--- a/singlesfoot.html
+++ b/singlesfoot.html
@@ -121,7 +121,7 @@
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-b">
 					<ul>
-						<li><a href="">Concept Inital Solution</a></li>
+						<li><a href="concept.html">Concept Inital Solution</a></li>
 						<li><a href="assets/pdf/compo_kit_en_initials_ed1_bd__038639400_0936_13062017.pdf" hreflang="en" class="LinkFile" target="_blank">Inital S™ Foot Kit content</a></li>
 					</ul>
 				</div>
