--- a/singles.html
+++ b/singles.html
@@ -144,7 +144,7 @@
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-b">
 					<ul>
-						<li><a href="">Concept Inital Solution</a></li>
+						<li><a href="concept.html">Concept Inital Solution</a></li>
 						<li><a href="assets/pdf/compo_kit_en_initials_hand_ed1_hd__042056900_1054_13062017.pdf" hreflang="en" class="LinkFile" target="_blank">Inital S™ Hand Kit content</a></li>
 					</ul>
 				</div>
