--- a/singlesfoot.html
+++ b/singlesfoot.html
@@ -45,7 +45,7 @@
 			<li><a href="singlea.html">INITIAL A</a></li>
 			<li><a href="singlec.html">INITIAL C</a></li>
 			<li><a href="singler.html">INITIAL R</a></li>
-			<li><a id="initials" href="#">INITIAL S</a></li> 
+			<li><a id="initials" href="#">INITIAL S</a></li>
 			<li><a href="initial-mtp.html">INITIAL MTP</a></li>
 		</ul>
 	</div>
@@ -84,6 +84,29 @@
 	<div id="lista-menu-6" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
 		<ul style="margin-left: 41%;">
 			<li><a href="upper_hand_handmotion.html">TORNILLOS CANULADOS</a></li>
+		</ul>
+	</div>
+
+	<!--<div id="lista-menu-7" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 368px;">
+			<li><a href="upper_humerus_alians.html">FEMUR</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">PIE</a></li>
+			<li><a href="upper_humerus_alians.html">TIBIA</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">TOBILLO</a></li>
+		</ul>
+	</div>-->
+
+	<div id="lista-menu-8" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 36%;">
+			<li><a href="sports_tibia_activmotion.html">ACTIVMOTION</a></li>
+			<li><a href="lower_tibia_activmotion-ligamento.html">ACTIVMOTION LIGAMENTO</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-9" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 23%;">
+			<li><a href="singles.html">INITAL S HAND</a></li>
+			<li><a href="singlesfoot.html">INITAL S FOOT</a></li>
 		</ul>
 	</div>
 	
